# SynComDesign-Python

./: README.md  README_CN.md  environment.yml  pyproject.toml
config/: biomass_reactions.tsv  metabolite_aliases.tsv  syncomdesign_config.yml
docs/: GITHUB_UPLOAD.md  MATLAB_ALIGNMENT_SPEC.md  MEDIUM_AND_CROSS_FEEDING_RULES.md  SERVER_INSTALLATION.md  USER_MANUAL_CN.md
media/: medium.tsv
models/: README.md
scripts/: run_example.pbs  run_example.sh
syncomdesign/: __init__.py  cli.py  combinations.py  community.py  config.py  diagnostics.py  fluxes.py  io.py  matlab_reference.py  medium.py  objectives.py  reporting.py  solvers.py  validation.py  zero_diagnostics.py
tests/: test_combinations.py  test_community.py  test_flux_mapping.py  test_matlab_alignment.py  test_medium.py  test_objectives.py
